<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        tools:context=".activities.ActLogin">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/logo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box"
            android:hint="@string/mobile_number"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetOtp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:text="@string/get_otp"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/bg_text_box"
            android:hint="@string/enter_otp"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/white" />


    </LinearLayout>
</layout>