<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:background="@color/gray_text2"
        tools:context=".activities.ActProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlTop"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/bottom_half_bg">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/profile"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter Your Name"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/name"
                    android:padding="3dp"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter Your mail ID"
                    android:textColor="@color/txt_hint_color"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="3dp"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter Your Mobile Number"
                    android:textColor="@color/txt_hint_color"
                    android:textSize="10sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:padding="3dp"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/black" />


                <EditText
                    android:id="@+id/btnDatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_pick_date"
                    android:gravity="center"
                    android:hint="Your Date of Birth"
                    android:scaleX="0.9"
                    android:scaleY="0.9"
                    android:textColor="@color/txt_color"
                    android:textColorHint="@color/txt_hint_color"
                    android:textSize="15sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender"
                    android:textColor="@color/black"
                    android:textSize="10sp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:elevation="2dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:outlineProvider="bounds">


                    <RadioButton
                        android:id="@+id/rbGenderMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:drawableEnd="@drawable/ic_male"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rbGenderFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:drawableEnd="@drawable/ic_female"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:textColor="@color/black"
                        android:textStyle="bold" />
                </RadioGroup>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnBack"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_btn"
                    android:backgroundTint="@color/top_bg_color"
                    android:text="@string/back"
                    android:textColor="@color/white" />
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>